# Deep-LfD-Robotic-Suturing

./: .gitignore  README.md  alexnet_output.txt
branch/: REPRODUCING.md  alexnet_output.txt  customcnn_output.txt  newcnn10_output.txt  newcnn25_output.txt  newcnn50_output.txt  newcnn_output.txt  rcngru_output.txt  rcnlstm_output.txt  resnet_output.txt  vgg19_output.txt
branch/code/: LICENSE  filtering.py  filterstate.py  new.py  run
branch/environment/: Dockerfile  postInstall
branch/metadata/: metadata.yml
branch/results/: AlexNet_comprehensive_results.json  Customized_CNN_comprehensive_results.json  RCN_GRU.h5  RCN_GRU_comprehensive_results.json  RCN_LSTM.h5  RCN_LSTM_comprehensive_results.json  ResNet152V2_comprehensive_results.json  ResNet152V2_input_scaler.pkl  ResNet152V2_output_scaler.pkl  imageNameList.csv  (+5 more)
src/suturing_simulation/: CMakeLists.txt  package.xml
src/suturing_simulation/config/: camera_config.yaml  controller_manager.yaml  suturing_config.rviz
src/suturing_simulation/launch/: suturing_simulation.launch.py
src/suturing_simulation/models/deformable_skin/: model.config  model.sdf
src/suturing_simulation/models/ground_plane/: model.config  model.sdf
src/suturing_simulation/models/needle_1/: model.config  model.sdf
src/suturing_simulation/models/needle_2/: model.config  model.sdf
src/suturing_simulation/models/sun/: model.config  model.sdf
src/suturing_simulation/scripts/: data_collector.py  suturing_controller.py
src/suturing_simulation/urdf/: da_vinci_robot.urdf.xacro
src/suturing_simulation/worlds/: suturing_world.sdf
(+8 files in other folders)
